--- a/angular.json
+++ b/angular.json
@@ -129,7 +129,10 @@
     }
   },
   "cli": {
-    "schematicCollections": ["@ionic/angular-toolkit"]
+    "schematicCollections": [
+      "@ionic/angular-toolkit"
+    ],
+    "analytics": "3ad052b9-38ca-4129-b6a2-5825952dc8ad"
   },
   "schematics": {
     "@ionic/angular-toolkit:component": {
