--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,8 @@ $RECYCLE.BIN/
 *.log
 log.txt
 
+/src/environments/environment.ts
+/src/environments/environment.prod.ts
 
 /.sourcemaps
 /.versions
